Is this how relative links work?

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 	<body>
 		<p>
 			Blatt 2
-			<br><a href="/Blatt 2/B.1.html">B.1</a>
-			<br><a href="/Blatt 2/B.2.html">B.2</a>
-			<br><a href="/Blatt 2/B.3.html">B.3</a>
-			<br><a href="/Blatt 2/B.4.html">B.4</a>
+			<br><a href="Blatt 2/B.1.html">B.1</a>
+			<br><a href="Blatt 2/B.2.html">B.2</a>
+			<br><a href="Blatt 2/B.3.html">B.3</a>
+			<br><a href="Blatt 2/B.4.html">B.4</a>
 		</p>
 		<p>
 			Blatt 3
-			<br><a href="/Blatt 3/B.1.html">B.1</a>
+			<br><a href="Blatt 3/B.1.html">B.1</a>
 		</p>
 	</body>
 </html>
