--- a/Blatt 3/B.1.html
+++ b/Blatt 3/B.1.html
@@ -91,9 +91,9 @@ function showResults() {
 }
 
 // start
-currentBoxX = parseInt(canvas.width / 2);
+currentBoxX = 0;
 currentBoxY = parseInt(canvas.height / 2);
-currentBoxSize = 0;
+currentBoxSize = BOX_WIDTHS.length - 1;
 currentBoxY -= BOX_HEIGHTS[currentBoxSize] / 2; //REMOVE THIS LINE
 sizesUsed[0]++;
 draw.fillStyle = "#7f7f7f";
