Change size choosing behavior

--- a/Blatt 3/B.1.html
+++ b/Blatt 3/B.1.html
@@ -27,10 +27,14 @@ var PIXELS_PER_MILLIMETER = dpi / 25.4;
 
 var BOX_WIDTHS = [10 * PIXELS_PER_MILLIMETER, 20 * PIXELS_PER_MILLIMETER, 30 * PIXELS_PER_MILLIMETER, 40 * PIXELS_PER_MILLIMETER, 50 * PIXELS_PER_MILLIMETER],
 	BOX_HEIGHTS = [5 * PIXELS_PER_MILLIMETER, 10 * PIXELS_PER_MILLIMETER, 15 * PIXELS_PER_MILLIMETER, 20 * PIXELS_PER_MILLIMETER, 25 * PIXELS_PER_MILLIMETER];
-var MAX_USES = 1;
 if (BOX_WIDTHS.length != BOX_HEIGHTS.length) alert("You have some bug in your code.");
-var sizesUsed = new Array(BOX_WIDTHS.length);
-for (var i = 0; i < sizesUsed.length; i++) sizesUsed[i] = 0;
+var MAX_USES = 1;
+var availSizes = [];
+for (var i = 0; i < BOX_WIDTHS.length; i++) {
+	for (var j = 0; j < MAX_USES; j++) {
+		availSizes.push(i);
+	}
+}
 var MIN_DISTANCE = 10 * PIXELS_PER_MILLIMETER;
 
 var currentBoxX, currentBoxY, currentBoxSize;
@@ -69,14 +73,9 @@ function showNextBox() {
 		currentBoxY = parseInt(Math.random() * (canvas.height - BOX_HEIGHTS[currentBoxSize] - currentBoxY - MIN_DISTANCE - BOX_HEIGHTS[BOX_HEIGHTS.length - 1])) + currentBoxY + BOX_WIDTHS[currentBoxSize] + MIN_DISTANCE;
 	} else alert("ERROR!\n\nNeither above nor below the box is any space for a new box!"); */
 	currentBoxY = parseInt(canvas.height / 2); //REMOVE THIS LINE
-	var size = Math.random();
-	for (var i = 0; i < sizesUsed.length; i++) {
-		if (size < (i + 1) * 1.0 / sizesUsed.length && sizesUsed[i] < MAX_USES) {
-			currentBoxSize = i;
-			sizesUsed[i]++;
-			break;
-		}
-	}
+	var i = Math.random() * availSizes.length;
+	availSizes.splice(i, 1);
+	currentBoxSize = i;
 	currentBoxY -= BOX_HEIGHTS[currentBoxSize] / 2; // REMOVE THIS LINE
 	draw.fillStyle = "#7f7f7f";
 	draw.fillRect(0, 0, canvas.width, canvas.height);
@@ -93,9 +92,8 @@ function showResults() {
 // start
 currentBoxX = 0;
 currentBoxY = parseInt(canvas.height / 2);
-currentBoxSize = BOX_WIDTHS.length - 1;
+currentBoxSize = availSizes.pop();
 currentBoxY -= BOX_HEIGHTS[currentBoxSize] / 2; //REMOVE THIS LINE
-sizesUsed[currentBoxSize]++;
 draw.fillStyle = "#7f7f7f";
 draw.fillRect(0, 0, canvas.width, canvas.height);
 draw.fillStyle = "#000000";
@@ -108,13 +106,12 @@ function isInCurrentBox(x, y) {
 }
 
 document.addEventListener("mouseup", function(event) {
-	var sum = 0;
-	for (var i = 0; i < sizesUsed.length; i++) sum += sizesUsed[i];
-	if (isInCurrentBox(event.x - canvas.offsetLeft, event.y - canvas.offsetTop) && sum < MAX_USES * sizesUsed.length) {
+	if (isInCurrentBox(event.x - canvas.offsetLeft, event.y - canvas.offsetTop)) {
 		ids[currentBoxSize].push(-1);
 		mts[currentBoxSize].push(-1);
-		showNextBox();
-	} else if (sum >= MAX_USES * sizesUsed.length) showResults();
+		if (availSizes.length > 0) showNextBox();
+		else showResults();
+	}
 });
 
 
