--- a/Blatt 3/B.1.html
+++ b/Blatt 3/B.1.html
@@ -39,8 +39,8 @@ var MIN_DISTANCE = 10 * PIXELS_PER_MILLIMETER;
 
 var currentBoxX, currentBoxY, currentBoxSize;
 
-var ids = new Array(sizesUsed.length), mts = new Array(sizesUsed.length);
-for (var i = 0; i < sizesUsed.length; i++) {
+var ids = new Array(BOX_WIDTHS.length), mts = new Array(BOX_WIDTHS.length);
+for (var i = 0; i < BOX_WIDTHS.length; i++) {
 	ids[i] = [];
 	mts[i] = [];
 }
