--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<p>
 			Blatt 3
 			<br><a href="./Blatt 3/B.1.html">B.1</a>
+			<br><a href="./Blatt 3/B.2.html">B.2</a>
 		</p>
 	</body>
 </html>
