add missing quotation mark

--- a/Blatt 3/B.1.html
+++ b/Blatt 3/B.1.html
@@ -89,7 +89,7 @@ function showResults() {
 	for (var i = 0; i < ids.length; i++) {
 		string += "<tr><td>" + ids[i] + "</td><td>" + mts[i] + "</td></tr>";
 	}
-	string += "</table>;
+	string += "</table>";
 	document.body.innerHTML = string;
 }
 
