--- a/Blatt 3/B.1.html
+++ b/Blatt 3/B.1.html
@@ -111,7 +111,7 @@ function isInCurrentBox(x, y) {
 
 document.addEventListener("mouseup", function(event) {
 	var currentClickX = event.x - canvas.offsetLeft, currentClickY = event.y - canvas.offsetTop;
-	if (isInCurrentBox(currentClickX, currentClickY) {
+	if (isInCurrentBox(currentClickX, currentClickY)) {
 		if (prevClickX !== undefined && prevClickY !== undefined) {
 			var a = Math.sqrt((prevClickX - currentClickX) * (prevClickX - currentClickX) + (prevClickY - currentClickY) * (prevClickY - currentClickY));
 			var w = BOX_WIDTHS[currentBoxSize] * BOX_HEIGHTS[currentBoxSize];
