--- a/Blatt 3/B.1.html
+++ b/Blatt 3/B.1.html
@@ -28,7 +28,7 @@ var PIXELS_PER_MILLIMETER = dpi / 25.4;
 var BOX_WIDTHS = [10 * PIXELS_PER_MILLIMETER, 20 * PIXELS_PER_MILLIMETER, 30 * PIXELS_PER_MILLIMETER, 40 * PIXELS_PER_MILLIMETER, 50 * PIXELS_PER_MILLIMETER],
 	BOX_HEIGHTS = [5 * PIXELS_PER_MILLIMETER, 10 * PIXELS_PER_MILLIMETER, 15 * PIXELS_PER_MILLIMETER, 20 * PIXELS_PER_MILLIMETER, 25 * PIXELS_PER_MILLIMETER];
 if (BOX_WIDTHS.length != BOX_HEIGHTS.length) alert("You have some bug in your code.");
-var MAX_USES = 1;
+var MAX_USES = 10;
 var availSizes = [];
 for (var i = 0; i < BOX_WIDTHS.length; i++) {
 	for (var j = 0; j < MAX_USES; j++) {
@@ -65,9 +65,9 @@ function showNextBox() {
 		} else {
 			currentBoxY = parseInt(Math.random() * (canvas.height - BOX_HEIGHTS[currentBoxSize] - currentBoxY - MIN_DISTANCE - BOX_HEIGHTS[BOX_HEIGHTS.length - 1])) + currentBoxY + BOX_HEIGHTS[currentBoxSize] + MIN_DISTANCE;
 		}
-	} else if (spaceLeft) {
+	} else if (spaceAbove) {
 		currentBoxY = parseInt(Math.random() * (currentBoxY - MIN_DISTANCE));
-	} else if (spaceRight) {
+	} else if (spaceBelow) {
 		currentBoxY = parseInt(Math.random() * (canvas.height - BOX_HEIGHTS[currentBoxSize] - currentBoxY - MIN_DISTANCE - BOX_HEIGHTS[BOX_HEIGHTS.length - 1])) + currentBoxY + BOX_WIDTHS[currentBoxSize] + MIN_DISTANCE;
 	} else alert("ERROR!\n\nNeither above nor below the box is any space for a new box!"); */
 	currentBoxY = parseInt(canvas.height / 2); //REMOVE THIS LINE
