include Excercise 4 in the index.html

--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
 			<br><a href="./Blatt 3/B.1.html">B.1</a>
 			<br><a href="./Blatt 3/B.2.html">B.2</a>
 		</p>
+		<p>
+			Blatt 4
+			<br><a href="./Blatt 4/B.1.html">B.1</a>
+		</p>
 	</body>
 </html>
